fixed spacing

--- a/client/src/app/pages/cars/single-car/car-function/car-function.component.css
+++ b/client/src/app/pages/cars/single-car/car-function/car-function.component.css
@@ -16,6 +16,5 @@
 
 .car-function {
     padding: 6px;
-    margin: 3px;
     border-radius: 7px;
 }
