--- a/client/src/app/pages/cars/single-car/single-car.component.css
+++ b/client/src/app/pages/cars/single-car/single-car.component.css
@@ -6,13 +6,13 @@
     font-size: 1.3em;
     font-weight: 600;
     text-transform: uppercase;
-    margin: 0 0 5px 0;
+    margin: 0 0 6px 0;
 }
 
 .car-image {
     height: 200px;
     background-color: rgba(219, 219, 219, 1);
-    margin: 0 0 5px 0;
+    margin: 0 0 6px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,5 +26,6 @@
 
 .car-functions {
     display: flex;
+    gap: 6px;
 }
 
